--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -87,6 +87,11 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col s12 center-align">
+                                <a href="/ordersList/<%= checkoutToken %>" class="waves-effect waves-light-3 black-text btn-flat">Ir al listado de Pedidos</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-action right-align">
                         <a href="<%= order.hash %>/download" class="waves-effect waves-light-3 btn btn-primary btn-next"><i class="material-icons left">cloud_download</i>Descargar</a>
