--- a/app/web/views/orders_list.html
+++ b/app/web/views/orders_list.html
@@ -20,25 +20,36 @@
                 <div class="card card-base">
                     <div class="card-content">
                         <h4>Pedidos</h4>
-                        <div class="row">
-                            <% orders.forEach(order => { %>
-                                <div class="col s12 hide-on-med-and-up">
-                                    <div class="order-item">
-                                        <p><b>Fecha:</b> <%= order.createdAt.formatDateTime() %></p>
-                                        <p><b>Nombre y Apellido:</b> <%= order.name %> <%= order.surname %> <%= (order.instagramUser && order.instagramUser != '') ? `(${order.instagramUser})` : '' %></p>
-                                        <p><b>Producto:</b> <%= order.Product.name %></p>
-                                        <p><b>Precio:</b> $<%= order.Product.price + order.Background.price + order.Text.Typography.price %></p>
-                                        <br>
-                                        <p><b>Método de Entrega:</b> <%= order.deliveryMethod == 'shipping' ? 'Envío' : 'Punto de Entrega' %>
-                                        <%= (order.deliveryMethod == 'deliveryPoint' && order.deliveryPoint && order.deliveryPoint != '') ? `(${order.deliveryPoint})` : '' %></p>
-                                        <p><b>Método de Pago:</b> <%= order.paymentMethod == 'mercadopago' ? 'MercadoPago' : 'Efectivo' %></p>
+                        <ul class="collapsible expandable z-depth-0 collection-filter margin-bottom-0">
+                            <li class="active">
+                                <div class="collapsible-header"><i class="material-icons">filter_list</i>Filtros</div>
+                                <div class="collapsible-body">
+                                    <div class="row">
+                                        <% statuses.forEach(status => { %>
+                                            <div class="col s6 m2">
+                                                <div>
+                                                    <label>
+                                                        <input type="checkbox" class="filled-in status-filter" <% if(defaultStatusesActive.includes(status)) { %>checked="checked" <% } %> data-status="<%= status %>" />
+                                                        <span><%= getTranslatedStatus(status) %></span>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        <% }); %>
+                                    </div>
+                                    <div class="row margin-bottom-0">
+                                        <div class="col s12 center-align">
+                                            <button class="waves-effect waves-light-3 btn btn-small btn-primary btn-filter">Filtrar</button>
+                                        </div>
                                     </div>
                                 </div>
-                            <% }); %>
+                            </li>
+                        </ul>
+                        <div id="cellphone-orders-list" class="row margin-left-0 margin-right-0">
+                            <!-- dinamically loaded -->
                         </div>
                         <div class="row hide-on-small-only">
                             <div class="col s12">
-                                <table class="striped highlight">
+                                <table id="orders-table" class="striped highlight">
                                     <thead>
                                         <tr>
                                             <th>Fecha</th>
@@ -52,34 +63,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <% orders.forEach(order => { %>
-                                            <tr>
-                                                <td><%= order.createdAt.formatDateTime() %></td>
-                                                <td><%= order.name %> <%= order.surname %>
-                                                <%= (order.instagramUser && order.instagramUser != '') ? `(${order.instagramUser})` : '' %></td>
-                                                <td><%= order.Product.name %></td>
-                                                <td class="right-align">$<%= order.Product.price + order.Background.price + order.Text.Typography.price %></td>
-                                                <td class="center-align">
-                                                    <%= order.deliveryMethod == 'shipping' ? 'Envío' : 'Punto de Entrega' %>
-                                                    <%= (order.deliveryMethod == 'deliveryPoint' && order.deliveryPoint && order.deliveryPoint != '') ? `(${order.deliveryPoint})` : '' %>
-                                                </td>
-                                                <td class="center-align"><%= order.paymentMethod == 'mercadopago' ? 'MercadoPago' : 'Efectivo' %></td>
-                                                <td>
-                                                    <button class="waves-effect waves-light-3 btn btn-small dropdown-trigger status-dropdown-btn <%= order.status %>-status" data-status="<%= order.status %>" data-target='dropdown-<%= order.id %>'><%= getTranslatedStatus(order.status) %></button>
-                                                    <ul id='dropdown-<%= order.id %>' class='dropdown-content status-dropdown'>
-                                                        <li data-status="pending"><a>Pendiente</a></li>
-                                                        <li data-status="design"><a>Diseño</a></li>
-                                                        <li data-status="print"><a>Impresión</a></li>
-                                                        <li data-status="packaging"><a>Corte y Empaquetado</a></li>
-                                                        <li data-status="ready"><a>Listo para la entrega</a></li>
-                                                        <li data-status="delivered"><a>Entregado</a></li>
-                                                    </ul>
-                                                </td>
-                                                <td>
-                                                    <a href="/checkout/<%= checkoutToken %>/<%= order.hash %>" class="waves-effect waves-light-3 black-text btn-flat"><i class="material-icons">remove_red_eye</i></a>
-                                                </td>
-                                            </tr>
-                                        <% }); %>
+                                        <!-- dinamically loaded -->
                                     </tbody>
                                 </table>
                             </div>
@@ -90,7 +74,73 @@
         </div>
     </div>
 </body>
+
+<div id="order-template" class="hide">
+<table>
+    <tbody>
+        <tr>
+            <td>{{ order.formattedCreatedAt }}</td>
+            <td>{{ order.clientName }}</td>
+            <td>{{ order.Product.name }}</td>
+            <td class="right-align">${{ order.price }}</td>
+            <td class="center-align">
+                {{ order.translatedDeliveryMethod }}
+            </td>
+            <td class="center-align">{{ order.translatedPaymentMethod }}</td>
+            <td class="status-container">
+                <button
+                    class="waves-effect waves-light-3 btn btn-small dropdown-trigger status-dropdown-btn {{ order.status }}-status"
+                    data-status="{{ order.status }}"
+                    data-target='dropdown-{{ order.id }}'
+                    onclick='openStatusDropdown(this)'>{{ order.translatedStatus }}</button>
+                <ul id='dropdown-{{ order.id }}' class='dropdown-content status-dropdown'>
+                    <% statuses.forEach(status => { %>
+                        <li data-status="<%= status %>" onclick="changeOrderStatus(this)"><a><%= getTranslatedStatus(status) %></a></li>
+                    <% }); %>
+                </ul>
+            </td>
+            <td>
+                <a href="/checkout/{{ checkoutToken }}/{{ order.hash }}"
+                    class="waves-effect waves-light-3 black-text btn-flat"><i class="material-icons">remove_red_eye</i></a>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</div>
+
+<div id="cellphone-order-template" class="hide">
+    <div class="col s12 hide-on-med-and-up order-cellphone-item">
+        <div class="order-item">
+            <p><b>Fecha:</b> {{ order.formattedCreatedAt }}</p>
+            <p><b>Nombre y Apellido:</b> {{ order.clientName }}</p>
+            <p><b>Producto:</b> {{ order.Product.name }}</p>
+            <p><b>Precio:</b> ${{ order.price }}</p>
+            <br>
+            <p><b>Método de Entrega:</b> {{ order.translatedDeliveryMethod }}</p>
+            <p><b>Método de Pago:</b> {{ order.translatedPaymentMethod }}</p>
+            <br>
+            <div class="row margin-bottom-0">
+                <div class="col s12 center-align status-container">
+                    <button class="waves-effect waves-light-3 btn btn-small dropdown-trigger status-dropdown-btn {{ order.status }}-status"
+                        data-status="{{ order.status }}" data-target='dropdownCellphone-{{ order.id }}'
+                        onclick='openStatusDropdown(this)'>{{ order.translatedStatus }}</button>
+                    <ul id='dropdownCellphone-{{ order.id }}' class='dropdown-content status-dropdown'>
+                        <% statuses.forEach(status => { %>
+                            <li data-status="<%= status %>" onclick="changeOrderStatus(this)"><a><%= getTranslatedStatus(status) %></a></li>
+                        <% }); %>
+                    </ul>
+                </div>
+                <div class="col s12 center-align">
+                    <a href="/checkout/{{ checkoutToken }}/{{ order.hash }}" class="waves-effect waves-light-3 black-text btn-flat">Detalle</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <script src="/lib/jquery/jquery.min.js"></script>
+<script src="/lib/mustache.js/mustache.min.js"></script>
 <script src="/lib/materialize/js/materialize.min.js"></script>
 <script src="/lib/pace/pace.min.js"></script>
 <script src="/js/base.js"></script>
