--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -88,6 +88,12 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     line-height: 20px;
 }
 
+/* Checkbox */
+[type="checkbox"].filled-in:checked+span:not(.lever):after {
+    background-color: var(--color-primary);
+    border: 2px solid var(--color-primary);
+}
+
 .ldBar-label {
     font-size: 0.55em;
     padding-bottom: 5px;
@@ -171,6 +177,12 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 .margin-bottom-0 {
     margin-bottom: 0px; 
 }
+.margin-left-0 {
+    margin-left: 0px !important; 
+}
+.margin-right-0 {
+    margin-right: 0px !important; 
+}
 
 /* photo upload */
 .fullscreen-container {
@@ -248,10 +260,20 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     padding-left: 25px;
 }
 .order-item {
-    margin-top: 10px;
-    margin-bottom: 10px;
     border-top: 1px solid rgba(160,160,160,0.2);
     padding-top: 10px;
+    padding-bottom: 10px;
+}
+.collection-filter .collapsible-header {
+    background-color: #f5f5f5; 
+    padding: 10px;
+}
+.collection-filter .collapsible-body {
+    padding: 15px;
+}
+.collection-filter [type="checkbox"]+span:not(.lever) {
+    line-height: 20px;
+    color: #212121;
 }
 
 /* collection */
@@ -275,6 +297,12 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 /* table */
 table.highlight>tbody>tr:hover {
     background-color: rgba(230,230,230,1);
+}
+#cellphone-orders-list>.order-cellphone-item:nth-child(odd) {
+    background-color: rgba(242,242,242,0.5);
+}
+#cellphone-orders-list {
+    margin-top: 15px;
 }
 
 /* statuses  */
