--- a/app/web/views/checkout.html
+++ b/app/web/views/checkout.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flor Barrau Fotografía</title>
     <link rel="shortcut icon" type="image/png" href="/img/favicon.ico" />
-    <meta name="theme-color" content="rgb(216, 124, 46)">
+    <meta name="theme-color" content="rgb(37,125,199)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/lib/materialize/css/materialize.min.css">
     <link rel="stylesheet" href="/css/style.css">
