--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -2,7 +2,7 @@
 /* theme-color: "rgb(37,125,199)" */
 :root {
     --color-primary: #00818e;
-    --color-primary-light: #0ae8ff;
+    --color-primary-light: #56efff;
     --color-primary-accent: #00afc1;
 }
 
