MercadoPago truly integration

--- a/app/web/views/completed_order.html
+++ b/app/web/views/completed_order.html
@@ -21,8 +21,8 @@
             <div class="col s12 col m8 offset-m2">
                 <div class="card card-base">
                     <div class="card-content">
-                        <h5>¡Todo listo!</h5>
-                        <h6>Tu pedido fue registrado y nos comunicaremos con vos cuando este listo para ser entregado.</h6>
+                        <h5><%= title %></h5>
+                        <h6><%= detail %></h6>
                     </div>
                     <div class="card-action center-align">
                         <a href='/' class="waves-effect waves-light-3 btn btn-primary">Hacer Otro Pedido</a>
