--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -43,10 +43,17 @@ html, body {
 .btn.btn-primary {
     background-color: var(--color-primary);
 }
-
 .btn.btn-primary:hover {
     background-color: var(--color-primary-accent);
 }
+
+.btn.btn-required {
+    background-color: #d93025;;
+}
+.btn.btn-required:hover {
+    background-color: #db5147;;
+}
+
 
 /* radio buttons */
 [type="radio"]:checked + span:after, 
@@ -269,6 +276,7 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     margin-bottom: 10px;
     padding-left: 25px;
 }
+.product-item,
 .order-item {
     border-top: 1px solid rgba(160,160,160,0.2);
     padding-top: 10px;
@@ -308,9 +316,11 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 table.highlight>tbody>tr:hover {
     background-color: rgba(230,230,230,1);
 }
+#cellphone-products-list>.product-cellphone-item:nth-child(odd),
 #cellphone-orders-list>.order-cellphone-item:nth-child(odd) {
     background-color: rgba(242,242,242,0.5);
 }
+#cellphone-products-list,
 #cellphone-orders-list {
     margin-top: 15px;
 }
@@ -356,6 +366,19 @@ table.highlight>tbody>tr:hover {
 .delivered-status:active,
 .delivered-status:focus {
     background-color: #90a4ae;
+}
+
+/* Products list */
+.product-image {
+    height: 50px;
+    width: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#products-table tr td:last-child{
+    width:1%;
+    white-space:nowrap;
 }
 
 /*Animations*/
