change background & font prices

--- a/app/web/views/background.html
+++ b/app/web/views/background.html
@@ -22,7 +22,7 @@
                         <h4>Nuevo Pedido</h4>
                         <p class='required'>*Obligatorio</p>
                         <br>
-                        <h5>Añadí color! (+$20)</h5>
+                        <h5>Añadí color! (+$30 al total del pedido)</h5>
                         <p>Fondos con diseños pesonalizados para tus fotos ❤ (+$20)</p>
                         <div class="center-align">
                             <img src="/img/background_sample.jpg" class="sample-image">
