change background & font price label

--- a/app/web/views/typography.html
+++ b/app/web/views/typography.html
@@ -22,8 +22,9 @@
                         <h4>Nuevo Pedido</h4>
                         <p class='required'>*Obligatorio</p>
                         <br>
-                        <h5>Agrega texto! (+$30 al total del pedido)</h5>
-                        <p>Podes agregar un texto personalizado y selecciona la tipografía que quieras que aparezcan en el pie de tus fotos (+$20)</p>
+                        <h5>Agrega texto!</h5>
+                        <p>Podes agregar un texto personalizado y seleccionar la tipografía que quieras que aparezca en el pie de tus fotos</p>
+                        <p><b>(+$30 al total del pedido)</b></p>
                         <div class="center-align">
                             <img src="/img/typography_sample.jpg" class="sample-image">
                         </div>
