--- a/app/web/views/background.html
+++ b/app/web/views/background.html
@@ -22,8 +22,9 @@
                         <h4>Nuevo Pedido</h4>
                         <p class='required'>*Obligatorio</p>
                         <br>
-                        <h5>Añadí color! (+$30 al total del pedido)</h5>
-                        <p>Fondos con diseños pesonalizados para tus fotos ❤ (+$20)</p>
+                        <h5>Añadí color!</h5>
+                        <p>Fondos con diseños pesonalizados para tus fotos ❤</p>
+                        <p><b>(+$30 al total del pedido)</b></p>
                         <div class="center-align">
                             <img src="/img/background_sample.jpg" class="sample-image">
                         </div>
