--- a/app/web/static/css/style.css
+++ b/app/web/static/css/style.css
@@ -2,7 +2,7 @@
     --color-primary: #865569;
     --color-primary-light: #ce8da7;
     --color-primary-accent: #b7587d;
-    --color-primary-grey: #84b4c7
+    --color-primary-grey: #d1b5c8
 }
 
 /* summer theme */
@@ -22,6 +22,9 @@
     --color-primary-accent: #db8200;
 } */
 
+* {
+    font-family: 'Roboto Condensed', sans-serif;
+}
 html, body {
     background-color: #F0EFE7;
 }
@@ -145,6 +148,49 @@ textarea.materialize-textarea:focus:not([readonly])+label {
     color: #212121;
 }
 
+.selectable-item .card .in-image-discount {
+    background-color: var(--color-primary-accent);
+    color: white;
+    font-weight: bold;
+    padding: 0px 5px 5px 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    box-shadow: 0px -3px 6px 0px rgba(0,0,0,0.15);
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    cursor: default;
+}
+.selectable-item .card.selected .in-image-discount {
+    padding: 1px 5px 4px 5px;
+}
+.selectable-item .in-image-discount .material-icons {
+    font-size: 18px;
+    margin-top: 2px;
+    position: relative;
+    top: 4px;
+}
+
+.old-price {
+    text-decoration: line-through;
+    color: #909090;
+}
+.discount-price {
+    /* color: #39b54a; */
+    color: var(--color-primary-accent);
+    font-weight: bold;
+}
+.discount-badge-container {
+    margin-top: 3px !important;
+}
+.discount-badge {
+    background-color: var(--color-primary-accent);
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 3px;
+}
+
 .progress .determinate {
     background-color: var(--color-primary) !important;
 }
@@ -223,6 +269,14 @@ textarea.materialize-textarea:focus:not([readonly])+label {
 .border-sides-2 {
     border-left: 1px solid rgba(160,160,160,0.2);
     border-right: 1px solid rgba(160,160,160,0.2);
+}
+
+/* more fancy! */
+.card, .collection, .modal {
+  border-radius: 8px;
+}
+.btn:not(.btn-floating) {
+  border-radius: 5px;
 }
 
 /* photo upload */
